--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body
         button {
             width: 100%;
             padding: 12px;
-            background: linear-gradient(90deg, #2980b9 0%, #6dd5fa 100%);
+            background: linear-gradient(90deg, #2f393f 0%, #373d3f 100%);
             color: #fff;
             border: none;
             border-radius: 6px;
